--- a/notes/package.json
+++ b/notes/package.json
@@ -82,6 +82,7 @@
     "framer-motion": "^12.0.6",
     "fuse.js": "^7.0.0",
     "lucide-react": "^0.294.0",
+    "mammoth": "^1.9.0",
     "openai": "^4.82.0",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
