--- a/notes/package.json
+++ b/notes/package.json
@@ -114,6 +114,7 @@
     "husky": "^9.1.7",
     "jsdoc": "^4.0.4",
     "lint-staged": "^15.4.3",
+    "pdfjs-dist": "^4.10.38",
     "postcss": "^8.4.32",
     "simple-git-hooks": "^2.11.1",
     "tailwindcss": "^3.3.6",
