--- a/notes/package.json
+++ b/notes/package.json
@@ -39,6 +39,8 @@
     "@fontsource/source-sans-3": "^5.0.18",
     "@fontsource/space-mono": "^5.0.8",
     "@fontsource/ubuntu-mono": "^5.0.8",
+    "@googleapis/docs": "^3.3.0",
+    "@googleapis/drive": "^8.14.0",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-alert-dialog": "^1.1.5",
@@ -63,6 +65,7 @@
     "@radix-ui/react-tooltip": "^1.1.7",
     "@react-firebase/auth": "^0.2.10",
     "@react-firebase/firestore": "^0.5.5",
+    "@react-oauth/google": "^0.12.1",
     "@tailwindcss/vite": "^4.0.0",
     "@tiptap/extension-image": "^2.11.3",
     "@tiptap/extension-link": "^2.11.3",
@@ -91,6 +94,7 @@
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.3",
     "shadcn-ui": "^0.9.4",
+    "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "tiptap": "^1.32.2",
