--- a/notes/package.json
+++ b/notes/package.json
@@ -84,6 +84,7 @@
     "firebase": "^11.2.0",
     "framer-motion": "^12.0.6",
     "fuse.js": "^7.0.0",
+    "jspdf": "^2.5.2",
     "lucide-react": "^0.294.0",
     "mammoth": "^1.9.0",
     "openai": "^4.82.0",
