--- a/notes/package.json
+++ b/notes/package.json
@@ -81,6 +81,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "dexie": "^4.0.11",
+    "docx": "^9.1.1",
     "firebase": "^11.2.0",
     "framer-motion": "^12.0.6",
     "fuse.js": "^7.0.0",
