--- a/notes/package.json
+++ b/notes/package.json
@@ -17,6 +17,7 @@
     "@blocknote/mantine": "^0.23.1",
     "@blocknote/react": "^0.23.1",
     "@blocknote/shadcn": "^0.23.1",
+    "@blocknote/xl-pdf-exporter": "^0.23.1",
     "@fontsource/anonymous-pro": "^5.0.8",
     "@fontsource/caveat": "^5.0.16",
     "@fontsource/comic-neue": "^5.0.8",
@@ -66,6 +67,7 @@
     "@react-firebase/auth": "^0.2.10",
     "@react-firebase/firestore": "^0.5.5",
     "@react-oauth/google": "^0.12.1",
+    "@react-pdf/renderer": "^4.1.6",
     "@tailwindcss/vite": "^4.0.0",
     "@tiptap/extension-image": "^2.11.3",
     "@tiptap/extension-link": "^2.11.3",
